--- a/models/csv_to_json.ipynb
+++ b/models/csv_to_json.ipynb
@@ -79,18 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Elasticsearch' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [1], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Direct upload from CSV to Elasticsearch\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \n\u001b[0;32m      3\u001b[0m \u001b[39m# Set variables\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m es_client \u001b[39m=\u001b[39m Elasticsearch(\u001b[39m\"\u001b[39m\u001b[39mhttp://localhost:9200\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      5\u001b[0m index \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mcomments\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m      7\u001b[0m actions \u001b[39m=\u001b[39m []\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Elasticsearch' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All Finished\n"
      ]
     }
    ],
@@ -103,7 +99,7 @@
     "\n",
     "actions = []\n",
     "\n",
-    "with open(\"./models/data/csv/combined/combined.csv\", \"r\", encoding='utf-8') as infile:\n",
+    "with open(\"./data/csv/combined/combined.csv\", \"r\", encoding='utf-8') as infile:\n",
     "  inreader = csv.reader(infile, delimiter=',', quotechar='\"')\n",
     "  for id, line in enumerate(inreader):\n",
     "        # Ignore the columns names\n",
