Deleting unneeded files

--- a/models/csv_to_json.ipynb
+++ b/models/csv_to_json.ipynb
@@ -91,6 +91,9 @@
     }
    ],
    "source": [
+    "from elasticsearch import helpers\n",
+    "from elasticsearch import Elasticsearch\n",
+    "\n",
     "# Direct upload from CSV to Elasticsearch\n",
     "\n",
     "# Set variables\n",
