Updating script file

--- a/models/csv_to_json.ipynb
+++ b/models/csv_to_json.ipynb
@@ -79,9 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\a.almasri\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\elasticsearch\\connection\\base.py:200: ElasticsearchWarning: [types removal] Specifying types in bulk requests is deprecated.\n",
+      "  warnings.warn(message, category=ElasticsearchWarning)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -91,10 +99,14 @@
     }
    ],
    "source": [
+    "# Direct upload from CSV to Elasticsearch\n",
+    "\n",
+    "\n",
     "from elasticsearch import helpers\n",
     "from elasticsearch import Elasticsearch\n",
+    "import csv\n",
     "\n",
-    "# Direct upload from CSV to Elasticsearch\n",
+    "\n",
     "\n",
     "# Set variables\n",
     "es_client = Elasticsearch(\"http://localhost:9200\")\n",
