--- a/models/data/Youtube_Data_API.ipynb
+++ b/models/data/Youtube_Data_API.ipynb
@@ -230,6 +230,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "129\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'top_comments' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/w3/97t5rll92mxf9q_7rfsyv4zw0000gn/T/ipykernel_60307/2219566415.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;31m#top_comments = items['snippet']\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtop_comments\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'top_comments' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "json_filename = \"tricks_geldanlage.json\"\n",
+    "json_path = os.path.join(\"Data_API_Comments\", json_filename)\n",
+    "\n",
+    "\n",
+    "with open(json_path) as json_file:\n",
+    "    data = json.load(json_file)\n",
+    "\n",
+    "    items = data['items']\n",
+    "    \n",
+    "    comments = []\n",
+    "    for item in items:\n",
+    "        textOriginal = item['snippet']['topLevelComment']['snippet']['textOriginal']\n",
+    "        comments.append(textOriginal)\n",
+    "   \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
