New script for ES data import

--- a/models/csv_to_json.ipynb
+++ b/models/csv_to_json.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -141,11 +141,80 @@
     "       \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All Finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Direct upload from json to Elasticsearch\n",
+    "\n",
+    "\n",
+    "from elasticsearch import helpers\n",
+    "from elasticsearch import Elasticsearch\n",
+    "import json\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Set variables\n",
+    "es_client = Elasticsearch(\"http://localhost:9200\")\n",
+    "index = 'comments'\n",
+    "\n",
+    "actions = []\n",
+    "\n",
+    "path = \"./data/Data_API_Comments/finanzen.json\"\n",
+    "\n",
+    "with open(path, \"r\", encoding='utf-8') as infile:\n",
+    "  inreader = json.load(infile)\n",
+    "\n",
+    "  items = inreader['items']\n",
+    "\n",
+    "  \n",
+    "\n",
+    "  comments = []\n",
+    "\n",
+    "  for item in items:\n",
+    "      textOriginal = item['snippet']['topLevelComment']['snippet']['textOriginal']\n",
+    "      textOriginal = textOriginal.replace(\"\\n\", \"\")\n",
+    "      comments.append(textOriginal)\n",
+    "\n",
+    "  actions = [] \n",
+    "\n",
+    "  for id, line in enumerate(comments):\n",
+    "        source = {\n",
+    "                  'content' : line                 \n",
+    "                }\n",
+    "        action = {\n",
+    "            \"_index\":   'comments',\n",
+    "            '_op_type': 'index',\n",
+    "            \"_type\":    '_doc',\n",
+    "            \"_id\":       id + 1957,\n",
+    "            \"_source\":   source\n",
+    "                }\n",
+    "        actions.append(action)    \n",
+    "        \n",
+    "  helpers.bulk(es_client, actions)\n",
+    "  \n",
+    "\n",
+    "print('All Finished')        \n",
+    " \n",
+    "       \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 64-bit",
+   "display_name": "Python 3.11.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -159,12 +228,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "97cc609b13305c559618ec78a438abc56230b9381f827f22d070313b9a1f3777"
+    "hash": "19e2b0ba2fb85cf63582a4dff9b7969e3117b3bb4abcc9d2ff6cd82e4f2230b2"
    }
   }
  },
