--- a/models/csv_to_json.ipynb
+++ b/models/csv_to_json.ipynb
@@ -214,7 +214,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 64-bit",
+   "display_name": "model_env",
    "language": "python",
    "name": "python3"
   },
@@ -228,12 +228,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.8 (main, Oct 12 2022, 19:14:26) [GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "19e2b0ba2fb85cf63582a4dff9b7969e3117b3bb4abcc9d2ff6cd82e4f2230b2"
+    "hash": "5907587528920898ec295df888b65059550f6aac43dddaf75e34466408980fac"
    }
   }
  },
