--- a/models/data/Youtube_Data_API.ipynb
+++ b/models/data/Youtube_Data_API.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,16 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hi abdul"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +72,7 @@
     "    request = youtube.commentThreads().list(\n",
     "        part=\"id, replies, snippet\",\n",
     "        videoId=\"oWkAcYTnifs\",\n",
-    "        maxResults= 100,\n",
+    "        maxResults= 10000,\n",
     "     \n",
     "    )\n",
     "    response = request.execute()\n",
@@ -289,7 +280,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "model_env",
    "language": "python",
    "name": "python3"
   },
@@ -303,12 +294,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.8 (main, Oct 12 2022, 19:14:26) [GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "949777d72b0d2535278d3dc13498b2535136f6dfe0678499012e853ee9abcab1"
+    "hash": "5907587528920898ec295df888b65059550f6aac43dddaf75e34466408980fac"
    }
   }
  },
