--- a/models/logistic-regression.ipynb
+++ b/models/logistic-regression.ipynb
@@ -732,7 +732,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "model_env",
    "language": "python",
    "name": "python3"
   },
@@ -746,7 +746,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.9 (main, Dec  7 2022, 01:12:00) [GCC 9.4.0]"
   },
   "toc-autonumbering": false,
   "toc-showcode": false,
@@ -754,7 +754,7 @@
   "toc-showtags": false,
   "vscode": {
    "interpreter": {
-    "hash": "97cc609b13305c559618ec78a438abc56230b9381f827f22d070313b9a1f3777"
+    "hash": "5907587528920898ec295df888b65059550f6aac43dddaf75e34466408980fac"
    }
   }
  },
