dataset creation script added
Co-authored-by: Vivian Kazakova <vivkaz@users.noreply.github.com>
Co-authored-by: almasria <almasria@users.noreply.github.com>

--- a/models/naive-bayes.ipynb
+++ b/models/naive-bayes.ipynb
@@ -57,13 +57,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9db08491",
    "metadata": {},
    "source": [
-    "### Import data\n",
-    "\n",
-    "We work with 1956 comments from 5 different YouTube videos. The [YouTube Spam Collection Data Set](https://archive.ics.uci.edu/ml/datasets/YouTube+Spam+Collection#) is freely available."
+    "### Import data"
    ]
   },
   {
@@ -174,21 +173,8 @@
     }
    ],
    "source": [
-    "path = r\"data/YouTube-Spam-Collection/\"\n",
-    "files = glob.glob(os.path.join(path, \"*.csv\"))\n",
-    "\n",
-    "corpus = pd.concat((pd.read_csv(file) for file in files), ignore_index=True)\n",
+    "corpus = pd.read_csv(\"../dataset/dataset.csv\")\n",
     "corpus.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "56ee6a4b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert len(corpus) == 1956"
    ]
   },
   {
@@ -235,7 +221,7 @@
     }
    ],
    "source": [
-    "print(f\"Data types:\\n{corpus.dtypes}\\n\")\n",
+    "#print(f\"Data types:\\n{corpus.dtypes}\\n\")\n",
     "print(f\"There are {len(corpus['CLASS'].unique())} comment types: {corpus['CLASS'].unique()}\")\n",
     "print(f\"The dataset contains of {len(corpus)} examples: {len(corpus.loc[corpus['CLASS'] == 1])} spam and {len(corpus.loc[corpus['CLASS'] == 0])} legitimate comments\")\n",
     "\n",
@@ -265,16 +251,10 @@
     "#nltk.download('stopwords')\n",
     "#nltk.download('omw-1.4')\n",
     "    \n",
-    "def preprocess_data(corpus,\n",
-    "                    irrelevant_features=[\"COMMENT_ID\", \"AUTHOR\", \"DATE\"],\n",
-    "                    #rename_columns={\"CONTENT\":\"COMMENT\"}\n",
-    "                   ):\n",
-    "    \n",
-    "    # drop irrelevant features\n",
-    "    corpus.drop(irrelevant_features, inplace=True, axis=1)\n",
+    "def preprocess_data(corpus):\n",
     "\n",
     "    # remove blank rows if any\n",
-    "    corpus.dropna()\n",
+    "    corpus.dropna(inplace=True)\n",
     "    \n",
     "    # add column for representation\n",
     "    corpus['REPR'] = corpus.loc[:, 'CONTENT']\n",
