--- a/models/svm.ipynb
+++ b/models/svm.ipynb
@@ -324,10 +324,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b24fe675",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_svm_classifier' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[39m=\u001b[39m train_svm_classifier(corpus_tfidf, np\u001b[39m.\u001b[39masarray(corpus[\u001b[39m\"\u001b[39m\u001b[39mCLASS\u001b[39m\u001b[39m\"\u001b[39m]))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_svm_classifier' is not defined"
+     ]
+    }
+   ],
    "source": [
     "model = train_svm_classifier(corpus_tfidf, np.asarray(corpus[\"CLASS\"]))"
    ]
@@ -413,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 (main, Dec  7 2022, 01:12:00) [GCC 9.4.0]"
+   "version": "3.10.9"
   },
   "toc-autonumbering": false,
   "toc-showcode": false,
