create folder data with own and reference dataset

--- a/models/logistic-regression.ipynb
+++ b/models/logistic-regression.ipynb
@@ -134,7 +134,7 @@
     }
    ],
    "source": [
-    "corpus = pd.read_csv(\"../dataset/dataset.csv\")\n",
+    "corpus = pd.read_csv(\"../data/dataset.csv\")\n",
     "corpus.head()"
    ]
   },
