--- a/models/svm.ipynb
+++ b/models/svm.ipynb
@@ -134,7 +134,7 @@
     }
    ],
    "source": [
-    "corpus = pd.read_csv(\"../dataset/dataset.csv\")\n",
+    "corpus = pd.read_csv(\"../data/dataset.csv\")\n",
     "corpus.head()"
    ]
   },
