add ipynb for training classifiers in extra folder

--- a/extra/logistic-regression.ipynb
+++ b/extra/logistic-regression.ipynb
@@ -279,7 +279,7 @@
     "\n",
     "def save_model(model):\n",
     "    now = datetime.datetime.now()\n",
-    "    model_output_path = \"saved_models/\"+model.__class__.__name__.lower()+\"_\"+str(now.minute)+\"-\"+str(now.second)+\".joblib\"\n",
+    "    model_output_path = \"../models/saved_models/\"+model.__class__.__name__.lower()+\"_\"+str(now.minute)+\"-\"+str(now.second)+\".joblib\"\n",
     "    joblib.dump(model, open(model_output_path, 'wb+'))\n",
     "\n",
     "\n",
@@ -1097,7 +1097,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_output_path = \"saved_models/logisticregression_34-23.joblib\"\n",
+    "model_output_path = \"../models/saved_models/logisticregression_34-23.joblib\"\n",
     "\n",
     "def load_saved_model(model_path):\n",
     "    return joblib.load(model_path)"
