--- a/extra/svm.ipynb
+++ b/extra/svm.ipynb
@@ -286,7 +286,7 @@
     "\n",
     "def save_model(model):\n",
     "    now = datetime.datetime.now()\n",
-    "    model_output_path = \"saved_models/\"+model.__class__.__name__.lower()+\"_\"+str(now.minute)+\"-\"+str(now.second)+\".joblib\"\n",
+    "    model_output_path = \"../models/saved_models/\"+model.__class__.__name__.lower()+\"_\"+str(now.minute)+\"-\"+str(now.second)+\".joblib\"\n",
     "    joblib.dump(model, open(model_output_path, 'wb+'))\n",
     "\n",
     "\n",
@@ -385,7 +385,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_output_path = \"saved_models/svm_46-52.joblib\"\n",
+    "model_output_path = \"../models/saved_models/svm_46-52.joblib\"\n",
     "\n",
     "def load_saved_model(model_path):\n",
     "    return joblib.load(model_path)"
