--- a/extra/naive-bayes.ipynb
+++ b/extra/naive-bayes.ipynb
@@ -294,7 +294,7 @@
     "\n",
     "def save_model(model):\n",
     "    now = datetime.datetime.now()\n",
-    "    model_output_path = \"saved_models/\"+model.__class__.__name__.lower()+\"_\"+str(now.minute)+\"-\"+str(now.second)+\".joblib\"\n",
+    "    model_output_path = \"../models/saved_models/\"+model.__class__.__name__.lower()+\"_\"+str(now.minute)+\"-\"+str(now.second)+\".joblib\"\n",
     "    joblib.dump(model, open(model_output_path, 'wb+'))\n",
     "\n",
     "    \n",
@@ -559,7 +559,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_output_path = 'saved_models/multinomialnb_33-38.joblib'\n",
+    "model_output_path = '../models/saved_models/multinomialnb_33-38.joblib'\n",
     "\n",
     "def load_saved_model(model_path):\n",
     "    return joblib.load(model_path)"
@@ -713,7 +713,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "model_env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -727,7 +727,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.6"
   },
   "toc-autonumbering": false,
   "toc-showcode": false,
