--- a/models/csv_to_json.ipynb
+++ b/models/csv_to_json.ipynb
@@ -228,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Oct 12 2022, 19:14:26) [GCC 9.4.0]"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
